Update to GWT 2.11 (#466)
* GWT 2.10

* CR

* CR

* 2.11

* Updates

* Revert

* Revert

* Revert

* Fix BasicTemplateTest.java by attaching elements to the DOM before querying for computedStyle

* Minor changes

* Temporary remove failing test

* Test fix

* Restore removed test

---------

Co-authored-by: Tiago Bento <1584568+tiagobento@users.noreply.github.com>